Toot my horn in the README

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+This is cdecl, the C gibberish translator. This version has been enhanced
+by ridiculous_fish to support Apple's blocks syntax.
+
+Visit https://cdecl.org to use it online.
+
+Original README follows:
 
 			Cdecl version 2.5
 
